crates/stella-tui/tests/snapshots/status_bar_goldens__status_bar_at_deck_width.snap
---
source: crates/stella-tui/tests/status_bar_goldens.rs
expression: "frame(StatusBar(demo()), 100, 1)"
---
kimi-k3 · execute · ctx ████▎░░░░░░░ 35% · $0.45 · saved $0.69 · ✉ 21                         ? help
────────────────────────────────────────────────────────────────────────────────────────────────────
metal map: G gold · B gold_bright · s silver · w text · m muted · d dim · b border · R red · n green
wwwwwwwdddwwwwwwwdddmmmmGGGGGbbbbbbbwwwwdddGGGGGdddmmmmmmGGGGGdddssww-------------------------dddddd
